--- a/demographic-client/report-client-web/src/styles.scss
+++ b/demographic-client/report-client-web/src/styles.scss
@@ -1,2 +1,10 @@
 @import '@core/scss/core.scss';
 @import './assets/scss/styles';
+
+@import '~ngx-toastr/toastr';
+
+// bootstrap style toast
+// or import a bootstrap 4 alert styled design (SASS ONLY)
+// should be after your bootstrap imports, it uses bs4 variables, mixins, functions
+// @import '~ngx-toastr/toastr-bs4-alert';
+
