--- a/demographic-client/report-client-web/src/app/encode/encode.component.html
+++ b/demographic-client/report-client-web/src/app/encode/encode.component.html
@@ -9,38 +9,6 @@
   />
 </div>
 
-<!-- <div class="btn-group">
-  <div ngbDropdown>
-    <button
-      ngbDropdownToggle
-      class="btn btn-flat-primary"
-      type="button"
-      id="dropdownMenuButton100"
-      rippleEffect
-    >
-      Caverphone1
-    </button>
-    <div ngbDropdownMenu aria-labelledby="dropdownMenuButton100">
-      <a ngbDropdownItem href="javascript:void(0)">Caverphone1 </a>
-      <a ngbDropdownItem href="javascript:void(0)">Metaphone</a>
-      <a ngbDropdownItem href="javascript:void(0)">Soundex</a>
-    </div>
-  </div>
-</div> -->
-
-<!-- import org.apache.commons.codec.EncoderException;
-import org.apache.commons.codec.StringEncoder;
-import org.apache.commons.codec.language.Caverphone;
-import org.apache.commons.codec.language.Caverphone1;
-import org.apache.commons.codec.language.Caverphone2;
-import org.apache.commons.codec.language.ColognePhonetic;
-import org.apache.commons.codec.language.DaitchMokotoffSoundex;
-import org.apache.commons.codec.language.DoubleMetaphone;
-import org.apache.commons.codec.language.MatchRatingApproachEncoder;
-import org.apache.commons.codec.language.Metaphone;
-import org.apache.commons.codec.language.Nysiis;
-import org.apache.commons.codec.language.RefinedSoundex;
-import org.apache.commons.codec.language.Soundex; -->
 
 <div class="d-flex">
   <div class="form-group selectBox mr-3">
@@ -50,7 +18,7 @@ import org.apache.commons.codec.language.Soundex; -->
       class="form-control"
       [(ngModel)]="selectedAlgorithm"
     >
-      <option value="Metaphone" selected>Metaphone</option>
+      <option value="Metaphone" >Metaphone</option>
       <option
         *ngFor="let algorithm of algorithms"
         value="{{ algorithm.value }}"
