--- a/demographic-client/report-client-web/src/app/upload-screen/upload-screen.component.html
+++ b/demographic-client/report-client-web/src/app/upload-screen/upload-screen.component.html
@@ -1,4 +1,5 @@
 <div class="container" *ngIf="flag">
+    <label for="basicInput"><h2>Upload Your Csv File</h2></label><br/>
     <input (change)="selectfile($event)" type="file" />
     <button type="button" (click)="uploadfile()" class="btn btn-primary" rippleEffect>Upload</button>
   </div>
