--- a/demographic-client/report-client-web/src/app/search-screen/search-screen.component.html
+++ b/demographic-client/report-client-web/src/app/search-screen/search-screen.component.html
@@ -43,6 +43,9 @@
         </tbody>
       </table>
     </div>
+    <div class ="text-center" *ngIf = "fnameEmpty == 'Empty'">
+      <h3>No Results Found</h3>
+    </div>
   </div>
 
   <div class="lastName">
@@ -74,6 +77,9 @@
           </tr>
         </tbody>
       </table>
+    </div>
+    <div class ="text-center" *ngIf = "snameEmpty == 'Empty'">
+      <h3>No Results Found</h3>
     </div>
   </div>
 </div>
