--- a/demographic-client/report-client-web/src/app/upload-screen/upload-screen.component.html
+++ b/demographic-client/report-client-web/src/app/upload-screen/upload-screen.component.html
@@ -1,11 +1,12 @@
-<div class="container" *ngIf="flag">
+<div class="container">
     <label for="basicInput"><h2>Upload Your Csv File</h2></label><br/>
     <input (change)="selectfile($event)" type="file" />
     <button type="button" (click)="uploadfile()" class="btn btn-primary" rippleEffect>Upload</button>
+
+    <div class="container" *ngIf="!flag">
+        <h2>File is Uploading.....</h2>
+    </div>
   </div>
 
-  <div class="container" *ngIf="!flag">
-      <h1>Please wait.....</h1>
-      <h2>File is Uploading.....</h2>
-  </div>
+ 
   
