--- a/demographic-client/report-client-web/src/app/layout/components/navbar/navbar.component.html
+++ b/demographic-client/report-client-web/src/app/layout/components/navbar/navbar.component.html
@@ -4,7 +4,11 @@
     <li class="nav-item">
       <a class="navbar-brand" [routerLink]="['/']">
         <span class="brand-logo">
-          <img src="{{ coreConfig.app.appLogoImage }}" alt="brand-logo" width="36" />
+          <img
+            src="{{ coreConfig.app.appLogoImage }}"
+            alt="brand-logo"
+            width="36"
+          />
         </span>
         <h2 class="brand-text mb-0">{{ coreConfig.app.appName }}</h2>
       </a>
@@ -27,8 +31,15 @@
 
     <!-- Toggle skin -->
     <li class="nav-item d-none d-lg-block">
-      <a type="button" class="nav-link nav-link-style btn" (click)="toggleDarkSkin()">
-        <span [ngClass]="currentSkin === 'dark' ? 'icon-sun' : 'icon-moon'" class="ficon font-medium-5 feather"></span>
+      <a
+        type="button"
+        class="nav-link nav-link-style btn"
+        (click)="toggleDarkSkin()"
+      >
+        <span
+          [ngClass]="currentSkin === 'dark' ? 'icon-sun' : 'icon-moon'"
+          class="ficon font-medium-5 feather"
+        ></span>
       </a>
     </li>
     <!--/ Toggle skin -->
@@ -50,40 +61,7 @@
     <!--/ Language selection -->
 
     <!-- User Dropdown -->
-    <li ngbDropdown class="nav-item dropdown-user">
-      <a
-        class="nav-link dropdown-toggle dropdown-user-link"
-        id="dropdown-user"
-        ngbDropdownToggle
-        id="navbarUserDropdown"
-        aria-haspopup="true"
-        aria-expanded="false"
-      >
-        <div class="user-nav d-sm-flex d-none">
-          <span class="user-name font-weight-bolder">John Doe</span><span class="user-status">Sample</span>
-        </div>
-        <span class="avatar"
-          ><img
-            class="round"
-            src="../../../../assets/images/portrait/small/avatar-s-11.jpg"
-            alt="avatar"
-            height="40"
-            width="40" /><span class="avatar-status-online"></span
-        ></span>
-      </a>
-      <div ngbDropdownMenu aria-labelledby="navbarUserDropdown" class="dropdown-menu dropdown-menu-right">
-        <a ngbDropdownItem [routerLink]="['/']"><span [data-feather]="'user'" [class]="'mr-50'"></span> Profile</a
-        ><a ngbDropdownItem [routerLink]="['/']"><span [data-feather]="'mail'" [class]="'mr-50'"></span> Inbox</a
-        ><a ngbDropdownItem [routerLink]="['/']"><span [data-feather]="'check-square'" [class]="'mr-50'"></span> Task</a
-        ><a ngbDropdownItem [routerLink]="['/']"
-          ><span [data-feather]="'message-square'" [class]="'mr-50'"></span> Chats</a
-        >
-        <div class="dropdown-divider"></div>
-        <a ngbDropdownItem [routerLink]="['/pages/authentication/login-v2']"
-          ><span [data-feather]="'power'" [class]="'mr-50'"></span> Logout</a
-        >
-      </div>
-    </li>
+
     <!--/ User Dropdown -->
   </ul>
 </div>
