Fixed Bugs For Upload Screen and Fixed UI

--- a/demographic-client/report-client-web/src/app/layout/components/navbar/navbar.component.html
+++ b/demographic-client/report-client-web/src/app/layout/components/navbar/navbar.component.html
@@ -46,7 +46,7 @@
   </div>
 
   <ul class="nav navbar-nav align-items-center ml-auto">
-    <!-- ? Language selection | Uncomment if needed-->
+    <!-- ? Language  | Uncomment if needed-->
     <!-- <li ngbDropdown class="nav-item dropdown dropdown-language">
       <a class="nav-link dropdown-toggle" id="dropdown-flag" ngbDropdownToggle>
         <i class="flag-icon flag-icon-{{ languageOptions[_translateService.currentLang].flag }}"></i
