--- a/demographic-client/report-client-web/src/app/search-screen/search-screen.component.scss
+++ b/demographic-client/report-client-web/src/app/search-screen/search-screen.component.scss
@@ -12,3 +12,13 @@
 .algo{
     margin:20px 0px;
 }
+.card{
+    margin:2%;
+    padding:2%;
+}
+.input1{
+    width:50% !important;
+}
+.shadow{
+    background-color: rgb(112, 108, 108);
+}
