--- a/demographic-client/report-client-web/src/app/encode/encode.component.html
+++ b/demographic-client/report-client-web/src/app/encode/encode.component.html
@@ -1,3 +1,7 @@
+<div class = "card">
+  <div class = "card-title">
+   <h2>Encode Value</h2>
+  </div>
 <div class="form-group">
   <label for="basicInput">Enter Text to be Encoded</label>
   <input
@@ -6,6 +10,7 @@
     id="basicInput"
     placeholder="Jainish"
     [(ngModel)]="name"
+    style ="width:30%"
   />
 </div>
 
@@ -45,6 +50,7 @@
     type="text"
     class="form-control"
     id="basicInput"
+    style= "width:30%;"
     [(ngModel)]="encodedText"
   />
 </div>
@@ -53,6 +59,9 @@
   class="btn btn-outline-primary"
   (click)="copyCode(clipboardValue.value)"
   rippleEffect
+  style="width:5%;"
 >
   Copy!
 </button>
+
+</div>
