Fixed All bugs co authored by Jainish
Co-authored-by: Jainishsakhidas <Jainishsakhidas@users.noreply.github.com>

--- a/demographic-client/report-client-web/src/app/encode/encode.component.html
+++ b/demographic-client/report-client-web/src/app/encode/encode.component.html
@@ -1,3 +1,4 @@
+<div class="content-wrapper container-xxl p-0">
 <div class = "card">
   <div class = "card-title">
    <h2>Encode Value</h2>
@@ -8,7 +9,7 @@
     type="text"
     class="form-control"
     id="basicInput"
-    placeholder="Jainish"
+    placeholder="Type text here to encode"
     [(ngModel)]="name"
     style ="width:30%"
   />
@@ -59,9 +60,10 @@
   class="btn btn-outline-primary"
   (click)="copyCode(clipboardValue.value)"
   rippleEffect
-  style="width:5%;"
+  style="min-width:5%;max-width: 10%;"
 >
   Copy!
 </button>
 
+</div>
 </div>
