--- a/demographic-client/report-client-web/src/app/search-screen/search-screen.component.html
+++ b/demographic-client/report-client-web/src/app/search-screen/search-screen.component.html
@@ -1,3 +1,4 @@
+<div class="content-wrapper container-xxl p-0">
 <div class = "card">
   <div class = 'card-title'>
   <h2> Search By First And Last Name</h2>
@@ -27,7 +28,7 @@
         type="text"
         class="form-control"
         id="basicInput"
-        placeholder="Yash"
+        placeholder="FirstName"
         [(ngModel)] = "fnameValue"
       />
     <div class="my-2">
@@ -67,7 +68,7 @@
       type="text"
       class="form-control"
       id="basicInput"
-      placeholder="Saliya"
+      placeholder="LastName"
       [(ngModel)] ="snameValue"
     />
     <div class="my-2">
@@ -95,5 +96,6 @@
       <h3>No Results Found</h3>
     </div>
   </div>
+</div>
 </div>
 </div>
