--- a/demographic-client/report-client-web/src/app/search-screen/search-screen.component.html
+++ b/demographic-client/report-client-web/src/app/search-screen/search-screen.component.html
@@ -74,6 +74,10 @@
     <div class="my-2">
       <button type="button" class="btn btn-primary" (click)="fetchsnameresult()" rippleEffect>Search</button>
     </div>
+    <div class = "shadow p-3 mb-5 bg-white rounded"  *ngIf = "sname.length > 0" >
+      <div class = "card-title">
+        <h2> Last Name </h2>
+      </div>
     <div class="table-responsive" *ngIf = "sname.length > 0">
       <table class="table">
         <thead>
@@ -92,6 +96,7 @@
         </tbody>
       </table>
     </div>
+  </div>
     <div class ="text-center" *ngIf = "snameEmpty == 'Empty'">
       <h3>No Results Found</h3>
     </div>
