--- a/demographic-client/report-client-web/src/app/layout/components/navbar/navbar.component.html
+++ b/demographic-client/report-client-web/src/app/layout/components/navbar/navbar.component.html
@@ -10,7 +10,7 @@
             width="36"
           />
         </span>
-        <h2 class="brand-text mb-0">{{ coreConfig.app.appName }}</h2>
+        <h2 class="brand-text mb-0">Demographic</h2>
       </a>
     </li>
   </ul>
