--- a/demographic-client/report-client-web/src/app/search-user/search-user.component.html
+++ b/demographic-client/report-client-web/src/app/search-user/search-user.component.html
@@ -58,7 +58,7 @@
           </div>
           <div class="user-dob d-flex justify-content-between mx-3">
             <h4>
-              Date of Birth <span data-feather="calender" class="mr-25"></span>
+              Date of Birth <span data-feather="calendar" class="mr-25"></span>
             </h4>
             <div>{{ this.user.dob }}</div>
           </div>
