--- a/demographic-client/report-client-web/src/app/upload-screen/upload-screen.component.html
+++ b/demographic-client/report-client-web/src/app/upload-screen/upload-screen.component.html
@@ -1,2 +1,2 @@
-<app-upload [title]="'Upload Files'"></app-upload>
-<app-upload [title]="'Upload User Details'"></app-upload>
+<app-upload [filrUploadUrl] = "'http://localhost:9001/NameIndex/upload'" [title]="'Upload Files'"></app-upload>
+<app-upload [filrUploadUrl] = "'http://localhost:9001/NameIndex/upload/userdetails'" [title]="'Upload User Details'"></app-upload>
