--- a/demographic-client/report-client-web/src/app/search-screen/search-screen.component.html
+++ b/demographic-client/report-client-web/src/app/search-screen/search-screen.component.html
@@ -3,22 +3,43 @@
   <div class = 'card-title'>
   <h2> Search By First And Last Name</h2>
   </div>
-<div class="form-group selectBox mr-3">
-  <label for="basicSelect">Select Algorithm</label
-  >
-  <div class = 'input1'>
+  
 
-  <select
-    id="basicSelect"
-    class="form-control"
-    [(ngModel)]="selectedAlgorithm"
-    (change) = "reset()"
-  >
-    <option *ngFor="let algorithm of algorithms" value="{{ algorithm.value }}">
-      {{ algorithm.value }}
-    </option>
-  </select>
-</div>
+<div class = "row">
+  <div class = "col-md">
+    <div class="form-group selectBox mr-3">
+      <label for="basicSelect">Select Algorithm</label
+      >
+      <div class = 'input1'>
+    
+      <select
+        id="basicSelect"
+        class="form-control"
+        [(ngModel)]="selectedAlgorithm"
+      >
+        <option *ngFor="let algorithm of algorithms" value="{{ algorithm.value }}">
+          {{ algorithm.value }}
+        </option>
+      </select>
+    </div>
+  </div>
+  <div class = 'col-md'>
+    <div class="form-group selectBox mr-3">
+      <label for="basicSelect">Select Algorithm</label
+      >
+      <div class = 'input1'>
+    
+      <select
+        id="basicSelect"
+        class="form-control"
+        [(ngModel)]="selectedlastNameAlgorithm"
+      >
+        <option *ngFor="let algorithm of algorithms" value="{{ algorithm.value }}">
+          {{ algorithm.value }}
+        </option>
+      </select>
+    </div>
+  </div>
 </div>
 
 <div class="search">
