--- a/demographic-client/report-client-web/src/app/search-screen/search-screen.component.scss
+++ b/demographic-client/report-client-web/src/app/search-screen/search-screen.component.scss
@@ -16,9 +16,9 @@
 .card{
     padding:2%;
 }
-.input1{
-    width:50% !important;
-}
+// .input1{
+//     width:50% !important;
+// }
 .shadow{
     background-color: rgb(112, 108, 108);
 }
