User SignUp (Register)

--- a/demographic-client/report-client-web/src/app/authentication/auth-register-v2/auth-register-v2.component.html
+++ b/demographic-client/report-client-web/src/app/authentication/auth-register-v2/auth-register-v2.component.html
@@ -1,13 +1,19 @@
 <div class="auth-wrapper auth-v2">
   <div class="auth-inner row m-0">
     <!-- Brand logo--><a class="brand-logo" href="javascript:void(0);">
-      <img src="{{ coreConfig.app.appLogoImage }}" alt="brand-logo" height="28" />
+      <img
+        src="{{ coreConfig.app.appLogoImage }}"
+        alt="brand-logo"
+        height="28"
+      />
       <h2 class="brand-text text-primary ml-1">Vuexy</h2></a
     >
     <!-- /Brand logo-->
     <!-- Left Text-->
     <div class="d-none d-lg-flex col-lg-8 align-items-center p-5">
-      <div class="w-100 d-lg-flex align-items-center justify-content-center px-5">
+      <div
+        class="w-100 d-lg-flex align-items-center justify-content-center px-5"
+      >
         <img
           class="img-fluid"
           [src]="
@@ -23,9 +29,15 @@
     <!-- Register-->
     <div class="d-flex col-lg-4 align-items-center auth-bg px-2 p-lg-5">
       <div class="col-12 col-sm-8 col-md-6 col-lg-12 px-xl-2 mx-auto">
-        <h2 class="card-title font-weight-bold mb-1">Adventure starts here 🚀</h2>
+        <h2 class="card-title font-weight-bold mb-1">
+          Adventure starts here 🚀
+        </h2>
         <p class="card-text mb-2">Make your app management easy and fun!</p>
-        <form class="auth-register-form mt-2" [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+        <form
+          class="auth-register-form mt-2"
+          [formGroup]="registerForm"
+          (ngSubmit)="onSubmit()"
+        >
           <div class="form-group">
             <label for="register-username" class="form-label">Username</label>
             <input
@@ -38,11 +50,14 @@
               autofocus
               [ngClass]="{ 'is-invalid': submitted && f.username.errors }"
             />
-            <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
+            <div
+              *ngIf="submitted && f.username.errors"
+              class="invalid-feedback"
+            >
               <div *ngIf="f.username.errors.required">Username is required</div>
             </div>
           </div>
-          <div class="form-group">
+          <!-- <div class="form-group">
             <label for="register-email" class="form-label">Email</label>
             <input
               type="text"
@@ -57,7 +72,7 @@
               <div *ngIf="f.email.errors.required">Email is required</div>
               <div *ngIf="f.email.errors.email">Email must be a valid email address</div>
             </div>
-          </div>
+          </div> -->
 
           <div class="form-group">
             <label for="register-password" class="form-label">Password</label>
@@ -70,7 +85,9 @@
                 placeholder="············"
                 aria-describedby="register-password"
                 tabindex="3"
-                [ngClass]="{ 'is-invalid error': submitted && f.password.errors }"
+                [ngClass]="{
+                  'is-invalid error': submitted && f.password.errors
+                }"
               />
               <div class="input-group-append">
                 <span class="input-group-text cursor-pointer"
@@ -95,19 +112,28 @@
           </div>
           <div class="form-group">
             <div class="custom-control custom-checkbox">
-              <input class="custom-control-input" type="checkbox" id="register-privacy-policy" tabindex="4" />
+              <input
+                class="custom-control-input"
+                type="checkbox"
+                id="register-privacy-policy"
+                tabindex="4"
+              />
               <label class="custom-control-label" for="register-privacy-policy">
-                I agree to <a href="javascript:void(0);">privacy policy & terms</a>
+                I agree to
+                <a href="javascript:void(0);">privacy policy & terms</a>
               </label>
             </div>
           </div>
-          <button class="btn btn-primary btn-block" tabindex="5" rippleEffect>Sign up</button>
+          <button class="btn btn-primary btn-block" tabindex="5" rippleEffect>
+            Sign up
+          </button>
         </form>
         <p class="text-center mt-2">
           <span>Already have an account?</span
-          ><a routerLink="/authentication/login-v2"><span>&nbsp;Sign in instead</span></a>
+          ><a routerLink="/authentication/login-v2"
+            ><span>&nbsp;Sign in instead</span></a
+          >
         </p>
-        
       </div>
     </div>
     <!-- /Register-->
