--- a/demographic-client/report-client-web/src/app/authentication/auth-login-v2/auth-login-v2.component.html
+++ b/demographic-client/report-client-web/src/app/authentication/auth-login-v2/auth-login-v2.component.html
@@ -1,13 +1,19 @@
 <div class="auth-wrapper auth-v2">
   <div class="auth-inner row m-0">
     <!-- Brand logo--><a class="brand-logo" href="javascript:void(0);">
-      <img src="{{ coreConfig.app.appLogoImage }}" alt="brand-logo" height="28" />
+      <img
+        src="{{ coreConfig.app.appLogoImage }}"
+        alt="brand-logo"
+        height="28"
+      />
       <h2 class="brand-text text-primary ml-1">Vuexy</h2></a
     >
     <!-- /Brand logo-->
     <!-- Left Text-->
     <div class="d-none d-lg-flex col-lg-8 align-items-center p-5">
-      <div class="w-100 d-lg-flex align-items-center justify-content-center px-5">
+      <div
+        class="w-100 d-lg-flex align-items-center justify-content-center px-5"
+      >
         <img
           class="img-fluid"
           [src]="
@@ -24,14 +30,19 @@
     <div class="d-flex col-lg-4 align-items-center auth-bg px-2 p-lg-5">
       <div class="col-12 col-sm-8 col-md-6 col-lg-12 px-xl-2 mx-auto">
         <h2 class="card-title font-weight-bold mb-1">Welcome to Vuexy! 👋</h2>
-        <p class="card-text mb-2">Please sign-in to your account and start the adventure</p>
+        <p class="card-text mb-2">
+          Please sign-in to your account and start the adventure
+        </p>
         <ngb-alert [type]="'primary'" [dismissible]="false">
           <div class="alert-body font-small-2">
             <p>
-              <small class="mr-50"><span class="font-weight-bold">Admin:</span> admin@demo.com | admin</small>
-            </p>
-            <p>
-              <small class="mr-50"><span class="font-weight-bold">Client:</span> client@demo.com | client</small>
+              <small class="mr-50"
+                ><span class="font-weight-bold"
+                  >Admin:
+                  <br />
+                </span>
+                Username: admin | password: admin</small
+              >
             </p>
           </div>
           <span
@@ -47,35 +58,42 @@
           </div>
         </ngb-alert>
 
-        <form class="auth-login-form mt-2" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+        <form
+          class="auth-login-form mt-2"
+          [formGroup]="loginForm"
+          (ngSubmit)="onSubmit()"
+        >
           <div class="form-group">
-            <label class="form-label" for="login-email">Email</label>
+            <label class="form-label" for="login-email">Username</label>
             <input
               type="text"
               formControlName="email"
               class="form-control"
               [ngClass]="{ 'is-invalid': submitted && f.email.errors }"
-              placeholder="admin@demo.com"
+              placeholder="username"
               aria-describedby="login-email"
               autofocus=""
               tabindex="1"
             />
             <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
               <div *ngIf="f.email.errors.required">Email is required</div>
-              <div *ngIf="f.email.errors.email">Email must be a valid email address</div>
+              <div *ngIf="f.email.errors.email">
+                Email must be a valid email address
+              </div>
             </div>
           </div>
           <div class="form-group">
             <div class="d-flex justify-content-between">
-              <label for="login-password">Password</label
-              ><a routerLink="/authentication/forgot-password-v2"><small>Forgot Password?</small></a>
+              <label for="login-password">Password</label>
             </div>
             <div class="input-group input-group-merge form-password-toggle">
               <input
                 [type]="passwordTextType ? 'text' : 'password'"
                 formControlName="password"
                 class="form-control form-control-merge"
-                [ngClass]="{ 'is-invalid error': submitted && f.password.errors }"
+                [ngClass]="{
+                  'is-invalid error': submitted && f.password.errors
+                }"
                 placeholder="············"
                 aria-describedby="login-password"
                 tabindex="2"
@@ -103,20 +121,36 @@
           </div>
           <div class="form-group">
             <div class="custom-control custom-checkbox">
-              <input class="custom-control-input" id="remember-me" type="checkbox" tabindex="3" />
-              <label class="custom-control-label" for="remember-me"> Remember Me</label>
+              <input
+                class="custom-control-input"
+                id="remember-me"
+                type="checkbox"
+                tabindex="3"
+              />
+              <label class="custom-control-label" for="remember-me">
+                Remember Me</label
+              >
             </div>
           </div>
-          <button [disabled]="loading" class="btn btn-primary btn-block" tabindex="4" rippleEffect>
-            <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>Sign in
+          <button
+            [disabled]="loading"
+            class="btn btn-primary btn-block"
+            tabindex="4"
+            rippleEffect
+          >
+            <span
+              *ngIf="loading"
+              class="spinner-border spinner-border-sm mr-1"
+            ></span
+            >Sign in
           </button>
         </form>
         <p class="text-center mt-2">
           <span>New on our platform?</span
-          ><a routerLink="/authentication/register-v2"><span>&nbsp;Create an account</span></a>
+          ><a routerLink="/authentication/register-v2"
+            ><span>&nbsp;Create an account</span></a
+          >
         </p>
-        
-        
       </div>
     </div>
     <!-- /Login-->
